--- a/Assignment2/Assignment2.csproj
+++ b/Assignment2/Assignment2.csproj
@@ -30,6 +30,10 @@
     <Compile Remove="Migrations\20191108090216_DummyDataEdited.Designer.cs" />
     <Compile Remove="Migrations\20191108090743_InitialMigration.cs" />
     <Compile Remove="Migrations\20191108090743_InitialMigration.Designer.cs" />
+    <Compile Remove="Migrations\20191108100305_AddingMigration1.cs" />
+    <Compile Remove="Migrations\20191108100305_AddingMigration1.Designer.cs" />
+    <Compile Remove="Migrations\20191108101612_InitialMigration.cs" />
+    <Compile Remove="Migrations\20191108101612_InitialMigration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
