--- a/Assignment2/Assignment2.csproj
+++ b/Assignment2/Assignment2.csproj
@@ -36,6 +36,8 @@
     <Compile Remove="Migrations\20191108101612_InitialMigration.Designer.cs" />
     <Compile Remove="Migrations\20191108110502_InitialMigrationBertram.cs" />
     <Compile Remove="Migrations\20191108110502_InitialMigrationBertram.Designer.cs" />
+    <Compile Remove="Migrations\20191108110640_InitialMigrationBertram.cs" />
+    <Compile Remove="Migrations\20191108110640_InitialMigrationBertram.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
